crates/apollo_propeller/src/snapshots/apollo_propeller__merkle_test__merkle_proof_0.snap
---
source: crates/apollo_propeller/src/merkle_test.rs
expression: proof_hex
---
82d269388abd4ed8234fcd69213962d78da6537664e817130dd0edd599e2e5f6
77a2bbbfab93753d698c1a9f25a661eff5ce1e3040975887b4f4fc9b86662cff
32680e77526e6b00f00414c1b186bd2babcbb6124ed47374a4b5975d73b14d44
