crates/apollo_propeller/src/snapshots/apollo_propeller__merkle_test__merkle_proof_2.snap
---
source: crates/apollo_propeller/src/merkle_test.rs
expression: proof_hex
---
492fc3af857c7fa84a6cdf3471004b76708669b25c075358bbd8b9681f2b7f67
12ca0058aba68567ab94d9d577dddbee84f05efab2252411787c5b8af6341253
32680e77526e6b00f00414c1b186bd2babcbb6124ed47374a4b5975d73b14d44
