crates/apollo_propeller/src/snapshots/apollo_propeller__merkle_test__merkle_proof_3.snap
---
source: crates/apollo_propeller/src/merkle_test.rs
expression: proof_hex
---
529403ed24b6cd129bfeb31d6fe450188ce5bf904a5a51580648fd5a88247033
12ca0058aba68567ab94d9d577dddbee84f05efab2252411787c5b8af6341253
b04fc32ac836aadde3e557b7053f0af2ab4cbb7cb192116ac3963c94ed01efdf
