crates/apollo_propeller/src/snapshots/apollo_propeller__merkle_test__merkle_proof_4.snap
---
source: crates/apollo_propeller/src/merkle_test.rs
expression: proof_hex
---
32680e77526e6b00f00414c1b186bd2babcbb6124ed47374a4b5975d73b14d44
51b0f2721c2d4c8e6af0749d25d580caf9d64d072164abd934a83c9965d33ebb
33e8f0efa34823f096ab558059d565402e7bc2b4caeb637491714e3dec8e8410
